--- a/freelance-fe/src/app/documents/documents.component.html
+++ b/freelance-fe/src/app/documents/documents.component.html
@@ -1,21 +1,25 @@
 <div class='container'>
-  <h1 class="headline">
-      {{ pageTitle }}
-  </h1>
+  <h1 class="headline">{{ pageTitle }}</h1>
 
-  <div *ngFor="let doc of documents">
+  <div class="card" *ngFor="let doc of documents">
+    <img class="card-img-top" src="{{ doc.image_url }}" alt="Card image cap" width="100%">
 
-    <div class="card" style="width: 18rem;">
-      <img src="{{ doc.image_url }}" class="card-img-top" alt="Card Image cap" width="100%">
-      <div class="card-block">
-        <h4 class="card-title">{{ doc.title }}</h4>
-        <p class="card-text">{{ doc.description }}</p>
-        <a href="{{ doc.file_url }}" class="btn btn-primary">Download File</a>
-        <p class="card-text"><small class="text-muted">{{ doc.updated_at }}</small></p>
+    <div class="card-block">
+      <h4 class="card-title">{{ doc.title }}</h4>
+
+      <p class="card-text">
+        <small class="text-muted">Last updated: {{ doc.updated_at | date }}
+        </small>
+      </p>
+
+      <p class="card-text">{{ doc.description }}</p>
+
+      <div>
+        <a class="btn btn-lg btn-primary" href="{{ doc.file_url }}">Download File</a>
       </div>
-    </div>
-      
-  </div>
-    
-</div>
 
+    </div>
+
+  </div>
+
+</div>
